log
Thu 28 Sep 2023 04:25:24 PM UTC: 
 tests:  0|4
total_score: 0/70
305ead3
Thu 28 Sep 2023 04:28:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘heap’ [-Werror=unused-variable]
   36 |   Heap* heap = (Heap*)malloc(sizeof(heapElem)*2);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d9d19c2
Thu 28 Sep 2023 04:29:22 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|4
total_score: 0/70
9666ef6
Thu 28 Sep 2023 04:31:43 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:32: error: implicit declaration of function ‘mallox’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   40 |   heap->heapArray = (heapElem*)mallox(sizeof(heapElem) *2 );
      |                                ^~~~~~
      |                                malloc
heap.c:40:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   40 |   heap->heapArray = (heapElem*)mallox(sizeof(heapElem) *2 );
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
7adffb5
Thu 28 Sep 2023 04:31:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
b452e1c
Thu 28 Sep 2023 04:32:30 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
873a353
Thu 28 Sep 2023 04:32:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ded26a9
Thu 28 Sep 2023 04:32:47 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
7f4b158
Thu 28 Sep 2023 04:34:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ad34f9f
